--- a/templates/base.html
+++ b/templates/base.html
@@ -3,22 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet"
-                  href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-                  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-                  crossorigin="anonymous">
-    <link rel="stylesheet" href=/static/css/style.css/>
+    <link rel="stylesheet" href=/static/css/headers.css/>
+    <script src="/static/vendor/js/jquery-3.3.1.slim.min.js" defer></script>
+    <script src="/static/vendor/js/popper.min.js" async></script>
+    <link rel="stylesheet" href="/static/vendor/css/bootstrap.min.css">
+    <script src="/static/vendor/js/bootstrap.min.js" defer></script>
     <title>{{title}}</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="#">Задачник</a>
+    <header class="p-3 text-bg-dark">
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-        </nav>
-    </header>
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="/" class="nav-link px-2 text-secondary">Главная страница</a></li>
+          <li><a href="/cabinet" class="nav-link px-2 text-white">Личный кабинет</a></li>
+          <li><a href="/problems" class="nav-link px-2 text-white">Список задач</a></li>
+          <li><a href="/authors" class="nav-link px-2 text-white">Авторы</a></li>
+          <li><a href="/news" class="nav-link px-2 text-white">Новости</a></li>
+        </ul>
+
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+          <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Введите номер задачи" aria-label="Поиск задач">
+        </form>
+
+        <div class="text-end">
+            <a class="btn btn-outline-light me-2" href="/register">Регистрация</a>
+            <a class="btn btn-warning" href="/login">Вход</a>
+        </div>
+      </div>
+    </div>
+  </header>
+    <center>
     <main role="main" class="container">
-        {% block content %}{% endblock %}
+         {% block content %}{% endblock %}
     </main>
+    </center>
 </body>
 </html>
