--- a/templates/user_role.html
+++ b/templates/user_role.html
@@ -11,7 +11,7 @@
         <p>Вы являетесь автором задач или же вы хотите обучаться?</p>
       </div>
       <div class="modal-footer flex-column align-items-stretch w-100 gap-2 pb-3 border-top-0">
-        <a class="btn btn-lg btn-primary" href="/reguster_author">Автор</a>
+        <a class="btn btn-lg btn-primary" href="/register_author">Автор</a>
         <a class="btn btn-lg btn-success" href="/register_student">Ученик</a>
       </div>
     </div>
