--- a/templates/base.html
+++ b/templates/base.html
@@ -17,19 +17,23 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="/" class="nav-link px-2 text-secondary">Главная страница</a></li>
-          <li><a href="/cabinet" class="nav-link px-2 text-white">Личный кабинет</a></li>
+          <li><a href="/profile" class="nav-link px-2 text-white">Личный кабинет</a></li>
           <li><a href="/problems" class="nav-link px-2 text-white">Список задач</a></li>
           <li><a href="/authors" class="nav-link px-2 text-white">Авторы</a></li>
           <li><a href="/news" class="nav-link px-2 text-white">Новости</a></li>
         </ul>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Введите номер задачи" aria-label="Поиск задач">
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" action="/problem">
+          <input type="text" class="form-control form-control-dark text-bg-dark" placeholder="Введите номер задачи" aria-label="Поиск задач" name="problem_id">
         </form>
 
         <div class="text-end">
-            <a class="btn btn-outline-light me-2" href="/register">Регистрация</a>
-            <a class="btn btn-warning" href="/login">Вход</a>
+            {% if current_user.is_authenticated %}
+                <a class="btn btn-warning" href="/logout">{{ current_user.role }}: {{ current_user.username }}</a>
+            {% else %}
+                <a class="btn btn-outline-light me-2" href="/register">Регистрация</a>
+                <a class="btn btn-warning" href="/login">Вход</a>
+            {% endif %}
         </div>
       </div>
     </div>
