--- a/templates/login.html
+++ b/templates/login.html
@@ -90,24 +90,34 @@
   <body class="text-center">
 
 <main class="form-signin w-100 m-auto">
-  <form>
+  <form action="" method="post">
+    {{ form.hidden_tag() }}
     <h1 class="h3 mb-3 fw-normal">Вход</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
+      {{ form.email(class="form-control", type="email") }}
+      {{ form.email.label }}
+      {% for error in form.email.errors %}
+        <div class="alert alert-danger" role="alert">
+          {{ error }}
+        </div>
+      {% endfor %}
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
+      {{ form.password(class="form-control", type="password") }}
+      {{ form.password.label }}
+      {% for error in form.password.errors %}
+        <div class="alert alert-danger" role="alert">
+          {{ error }}
+        </div>
+      {% endfor %}
     </div>
 
     <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
+      {{ form.remember_me() }} {{ form.remember_me.label }}
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <p>{{ form.submit(type="submit", class="w-100 btn btn-lg btn-primary") }}</p>
+    <div>{{ message }}</div>
   </form>
 </main>
   </body>
