--- a/templates/author_profile.html
+++ b/templates/author_profile.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="modal-footer flex-column align-items-stretch w-100 gap-2 pb-3 border-top-0">
-        <a class="btn btn-lg btn-danger" href="/add_problem">Добавить задачу</a>
-    </div><br>
+    <a class="btn btn-lg btn-danger" href="/add_problem">Добавить задачу</a>
+    <h3 class="text-primary">Мои задачи</h3>
     <table class="table">
       <thead class="thead-light">
         <tr>
@@ -14,7 +13,27 @@
         </tr>
       </thead>
       <tbody>
-        {% for item in problems %}
+        {% for item in my_problems %}
+        <tr>
+          <th scope="row">{{item.id}}</th>
+          <td>{{item.title}}</td>
+          <td>{{item.difficult}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <h3 class="text-primary">Решённые задачи</h3>
+    <table class="table">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Задача</th>
+          <th scope="col">Сложность</th>
+          <th scope="col">Решено</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in solved_problems %}
         <tr>
           <th scope="row">{{item.id}}</th>
           <td>{{item.title}}</td>
