--- a/templates/problem.html
+++ b/templates/problem.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Задача {{problem_id}}</h1>
+    <h4>Задача {{problem.id}}</h4>
+    <h5>(Время: {{problem.time_needed}}. Память: {{problem.memory_needed}} Сложность: {{problem.difficult}}%)</h5><br>
+    <h3>Условие</h3>
+    <p>{{problem.description}}</p><br>
+    <h3>Входные данные</h3>
+    <p>{{problem.input_description}}</p><br>
+    <h3>Выходные данные</h3>
+    <p>{{problem.output_description}}</p><br>
+    {% if current_user.is_authenticated %}
+        <p>тут скоро можно будет присылать задачи</p>
+    {% else %}
+        <p class="text-success">Для отправки решения задачи необходимо <a href="/register" class="link-success">зарегистрироваться</a> и <a href="/login" class="link-success">авторизоваться</a>!</p>
+    {% endif %}
 {% endblock %}
