--- a/templates/author_profile.html
+++ b/templates/author_profile.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <a class="btn btn-lg btn-danger" href="/add_problem">Добавить задачу</a>
-    <h3 class="text-primary">Мои задачи</h3>
+    {% if my_profile %}
+      <a class="btn btn-lg btn-danger" href="/add_problem">Добавить задачу</a>
+    {% else %}
+      <h2>Профиль автора {{title}}</h2>
+    {% endif %}
+    <h3 class="text-primary">Задачи автора</h3>
     <table class="table">
       <thead class="thead-light">
         <tr>
@@ -36,8 +40,28 @@
         {% for item in solved_problems %}
         <tr>
           <th scope="row">{{item.id}}</th>
-          <td>{{item.title}}</td>
-          <td>{{item.difficult}}</td>
+          <td>{{item.problem.title}}</td>
+          <td>{{item.problem.difficult}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    <h3 class="text-primary">Любимые задачи</h3>
+    <table class="table">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Задача</th>
+          <th scope="col">Сложность</th>
+          <th scope="col">Решено</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in fav_problems %}
+        <tr>
+          <th scope="row">{{item.id}}</th>
+          <td>{{item.problem.title}}</td>
+          <td>{{item.problem.difficult}}</td>
         </tr>
         {% endfor %}
       </tbody>
