--- a/templates/problem.html
+++ b/templates/problem.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h4>Задача {{problem.id}}</h4>
-    <h5>(Время: {{problem.time_needed}}. Память: {{problem.memory_needed}} Сложность: {{problem.difficult}}%)</h5><br>
-    <h3>Условие</h3>
+    <h4>Задача №{{problem.id}}</h4><br>
+    <h2>{{problem.title}}</h2>
+    <h6>(Время: {{problem.time_needed}} сек. Память: {{problem.memory_needed}} Мб Сложность: {{problem.difficult}}%)</h6><br>
+    <h5>Условие</h5>
     <p>{{problem.description}}</p><br>
-    <h3>Входные данные</h3>
+    <h5>Входные данные</h5>
     <p>{{problem.input_description}}</p><br>
-    <h3>Выходные данные</h3>
+    <h5>Выходные данные</h5>
     <p>{{problem.output_description}}</p><br>
     {% if current_user.is_authenticated %}
         <p>тут скоро можно будет присылать задачи</p>
