--- a/templates/login.html
+++ b/templates/login.html
@@ -117,6 +117,7 @@
       {{ form.remember_me() }} {{ form.remember_me.label }}
     </div>
     <p>{{ form.submit(type="submit", class="w-100 btn btn-lg btn-primary") }}</p>
+    <a class="btn btn-secondary w-100 btn-lg" href="/register">Зарегистрироваться</a>
     <div>{{ message }}</div>
   </form>
 </main>
