--- a/templates/author_profile.html
+++ b/templates/author_profile.html
@@ -13,15 +13,22 @@
           <th scope="col">ID</th>
           <th scope="col">Задача</th>
           <th scope="col">Сложность</th>
-          <th scope="col">Решено</th>
+          {% if my_profile %}
+            <th scope="col">Редактировать</th>
+          {% endif %}
         </tr>
       </thead>
       <tbody>
         {% for item in my_problems %}
         <tr>
-          <th scope="row">{{item.id}}</th>
-          <td>{{item.title}}</td>
-          <td>{{item.difficult}}</td>
+          <th scope="row"><a href="/problem/{{item.id}}" class="link-danger">{{item.id}}</a></th>
+          <td><a href="/problem/{{item.id}}" class="link-success">{{item.title}}</a></td>
+          <td>{{item.difficult}}%</td>
+          {% if my_profile %}
+            <td><a class="btn btn-primary btn-sm" href="/edit_problem/{{item.id}}">Редактировать</a>
+              <a class="btn btn-secondary btn-sm" href="/edit_examples_and_tests/{{item.id}}">Примеры и тесты</a>
+              <a class="btn btn-danger btn-sm" href="/delete_problem/{{item.id}}">Удалить</a></td>
+          {% endif %}
         </tr>
         {% endfor %}
       </tbody>
@@ -34,14 +41,25 @@
           <th scope="col">Задача</th>
           <th scope="col">Сложность</th>
           <th scope="col">Решено</th>
+          {% if my_profile %}
+            <th scope="col">Нравится</th>
+          {% endif %}
         </tr>
       </thead>
       <tbody>
-        {% for item in solved_problems %}
+        {% for item in problems %}
         <tr>
-          <th scope="row">{{item.id}}</th>
-          <td>{{item.problem.title}}</td>
-          <td>{{item.problem.difficult}}</td>
+          <th scope="row"><a href="/problem/{{item.id}}" class="link-danger">{{item.id}}</a></th>
+          <td><a href="/problem/{{item.id}}" class="link-success">{{item.title}}</a></td>
+          <td>{{item.difficult}}%</td>
+          <td>Solved*</td>
+          {% if my_profile %}
+            {% if item.id in fav_problems_id %}
+              <td><a class="btn btn-secondary btn-sm" href="/liked/{{item.id}}">-</a></td>
+            {% else %}
+              <td><a class="btn btn-danger btn-sm" href="/liked/{{item.id}}">+</a></td>
+            {% endif %}
+          {% endif %}
         </tr>
         {% endfor %}
       </tbody>
@@ -59,9 +77,10 @@
       <tbody>
         {% for item in fav_problems %}
         <tr>
-          <th scope="row">{{item.id}}</th>
+          <th scope="row">{{item.problem.id}}</th>
           <td>{{item.problem.title}}</td>
-          <td>{{item.problem.difficult}}</td>
+          <td>{{item.problem.difficult}}%</td>
+          <td>Solved</td>
         </tr>
         {% endfor %}
       </tbody>
