--- a/templates/register.html
+++ b/templates/register.html
@@ -48,7 +48,7 @@
             {% endfor %}
           </div>
             <p>{{ form.submit(type="submit", class="w-100 mb-2 btn btn-lg rounded-3 btn-primary") }}</p>
-          <small class="text-body-secondary">Нажимая на "Зарегистрироваться" вы соглашаетесь продать нам вашу душу</small>
+          <small class="text-body-secondary"></small>
         </form>
       </div>
     </div>
