--- a/templates/problem.html
+++ b/templates/problem.html
@@ -22,7 +22,7 @@
         <tbody>
             {% for item in examples %}
                 <tr class="table-warning">
-                    <th scope="col">{{item.no}}</th>
+                    <th scope="col">{{item.no + 1}}</th>
                     <td>{{item.input}}</td>
                     <td>{{item.output}}</td>
                 </tr>
