--- a/templates/problem.html
+++ b/templates/problem.html
@@ -41,6 +41,7 @@
                     </p>
                 {% endfor %}
             </p>
+            <p>{{form.message}}</p>
             <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
         </form>
     {% else %}
