--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href=/static/css/headers.css/>
+    <link rel="stylesheet" href=/static/css/style.css/>
     <script src="/static/vendor/js/jquery-3.3.1.slim.min.js" defer></script>
     <script src="/static/vendor/js/popper.min.js" async></script>
     <link rel="stylesheet" href="/static/vendor/css/bootstrap.min.css">
