Adding to Glitch

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Это главная страница</h1>
+    <h1>Это главная страница моего сайта</h1>
+<h4 class="text-warning">А это классный манул</h4>
+<img src='/static/img/manul.jpg/' title="Манул" alt="Манул" width="640" height="480">
 {% endblock %}
